i add avatar section with css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
           <li class="nav-li">About</li>
           <li class="nav-li">Contact</li>
         </ul>
-        <div class=""></div>
       </div>
     </nav>
+    <div class="avatar-container">
+      <h1 class="avatar-h1">
+        Welcome <br />
+        on board!
+      </h1>
+      <img src="assets/avatar.png" alt="" class="avatar" />
+    </div>
   </body>
 </html>
