articles done with css

--- a/index.html
+++ b/index.html
@@ -26,5 +26,33 @@
       </h1>
       <img src="assets/avatar.png" alt="" class="avatar" />
     </div>
+    <header>
+      <div class="articles-container">
+        <h2 class="articles-h2">Recent articles</h2>
+        <div class="articles-column">
+          <div class="article-container">
+            <div class="article">
+              <img src="assets/responsive.png" alt="" class="article-png" />
+              <h2 class="article-h2">Responsive</h2>
+              <button class="article-btn">read</button>
+            </div>
+          </div>
+          <div class="article-container">
+            <div class="article">
+              <img src="assets/scalable.png" alt="" class="article-png" />
+              <h2 class="article-h2">Scalable</h2>
+              <button class="article-btn">read</button>
+            </div>
+          </div>
+          <div class="article-container">
+            <div class="article">
+              <img src="assets/inclusive.png" alt="" class="article-png" />
+              <h2 class="article-h2">Inclusive</h2>
+              <button class="article-btn">read</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
