done about section with css

--- a/index.html
+++ b/index.html
@@ -54,5 +54,50 @@
         </div>
       </div>
     </header>
+    <div class="about-container">
+      <div class="about-column">
+        <h2 class="about-h2">About</h2>
+        <article class="about-article">
+          <p class="about-articlep_p-1">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
+            nemo accusamus minima ipsa consequuntur neque harum veniam numquam.
+            Sed ratione aliquam harum neque perspiciatis libero id est illo
+            consequuntur ullam. Saepe, magnam sequi! Repudiandae consequatur
+            nulla odit laudantium, quod tenetur id beatae vero amet reiciendis
+            quia quae aperiam quam laborum eum inventore? Eum eaque asperiores
+            nobis est, sequi dicta iure? Labore facilis, reprehenderit ratione
+            modi ea adipisci perspiciatis ipsum dicta explicabo dolor delectus
+            est animi fuga, at amet enim esse cumque? Commodi quas voluptate
+            temporibus iure hic eaque odio eligendi. Aliquam tempore perferendis
+            exercitationem voluptatibus saepe, eius assumenda praesentium eum?
+            Recusandae illo sunt accusamus dignissimos hic? Eos possimus
+            laboriosam omnis doloribus cumque. Aut eum omnis eveniet magnam a
+            eius in. Dicta tenetur, architecto adipisci porro qui animi non quis
+            totam aliquid laborum reiciendis ratione voluptate nemo neque, hic
+            placeat omnis veritatis fugiat facere voluptatum fuga at. Dolor
+            pariatur fuga modi.
+          </p>
+          <p class="about-articlep_p-2">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non
+            deserunt voluptatibus molestias aliquid illum, explicabo quos
+            officiis voluptatum laboriosam sed fugiat facilis error ad
+            temporibus in omnis esse ut sequi. Id labore ut laborum quibusdam
+            molestiae itaque molestias minus recusandae culpa? Omnis unde
+            provident ipsum possimus suscipit impedit magnam. Nesciunt sed
+            possimus harum libero at esse excepturi ratione eius. Soluta? Sint
+            possimus aut ex dolor, maiores a enim earum unde saepe, sapiente
+            esse dolorem repellendus voluptas facere pariatur, doloremque porro!
+            Molestiae explicabo eos exercitationem commodi voluptate labore iure
+            possimus ipsum! Voluptates quidem minima placeat fuga culpa, ea,
+            cupiditate doloremque quis blanditiis est unde, nobis ipsum aut
+            voluptatum nostrum aliquam quod odio sit! Illum temporibus error
+            possimus aliquid saepe eos dicta? Ratione neque eveniet iusto earum
+            inventore repellat quas officia pariatur ipsa, ut quam nostrum
+            libero nisi nam commodi beatae mollitia sapiente cumque aut enim
+            recusandae laudantium. Ex ut earum quos?
+          </p>
+        </article>
+      </div>
+    </div>
   </body>
 </html>
